@@ -3,6 +3,7 @@
 ## Dev
 
 - Add support for "sticky" posts (sticky.php, single-sticky.php, feed-sticky.php) in the post context
+- Set default context to archive instead of home
 
 ## 3.4
 
